In jpegutils, use proper libjpeg error handling, as it is done in the jpegloader. Sometimes the mimetype detection may fail, and libjpeg would call exit() from the default error handler.

BUG: 139197

svn path=/trunk/extragear/graphics/digikam/; revision=617056